[metadata]
name = codecs_lib
version = 0.2.0
author = Anton Azarov
author_email = a.azarov@diagnoptics.com
description = Collection of simple codecs for data manipulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/diagnoptics/python/codecs_lib
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.6
package_dir =
    codecs_lib =
packages = codecs_lib, codecs_lib.tests
install_requires =
    introspection_lib >= 0.3
